--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://Kimaru01:Kimaru01@contact.j9y1f.mongodb.net/contact?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://Kimaru01:Kimaru01@contact.j9y1f.mongodb.net/KoyaTech?retryWrites=true&w=majority
 PORT=5000
